src/styles/_stages.scss
@import 'variables';


.stages-header {
  color: white;
  font-family: 'Smash Bros', serrif;
  font-size: 40px;
  height: 65%;
  margin: 20px auto 40px auto;
  text-align: center;
  width: 100%;
}

.stages-page {
  animation: zoomIn .8s ease;
  width: 100%;
}

.stage-cards {
  align-items: center;
  background-color: rgba(46, 46, 46, 0.3);
  background-blend-mode: darken;
  background-size: cover;
  border-radius: 15px;
  color: white;
  display: flex;
  flex-direction: column;
  font-size: 13px;
  height: 200px;
  justify-content: flex-end;
  overflow: hidden;
  transition: all .4s;
  width: 100%;

  &:hover {
    cursor: pointer;
    transform: scale(1.03);
    background-color: rgba(46, 46, 46, 0.0);
  }
}

.stages-body {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(auto-fit, 200px);
  margin: 150px 30px 150px 63px;
}

.stage-image {
  height: 200px;
  width: 200px;
}

.stage-name {
  background-color: black;
  background-image: url('../images/mosaic.png');
  padding: 12px;
  text-align: center;
  width: 100%;
}

.universe-pic {
  animation: zoomIn .8s ease;
  top: 60px;
  right: calc(50vw - 248px);
  position: absolute;
  height: 250px;
  width: 500px;
  z-index: -1;
}

.smash-logo {
  height: 210px;
}

